# aca-operator

./: .gitignore  CONTRIBUTING.md  DEPLOYMENT.md  Dockerfile  README.md  SKILL.md  pyproject.toml
.github/workflows/: build-scan-tag.yml  release.yml
docs/: CLI_ROADMAP.md  roadmap.md
docs/architecture/: README.md  synoscd-context.mmd
docs/decisions/: go-vs-python.md
examples/: app-example.yaml  project-example.yaml  worker-example.yaml
scripts/: bootstrap_env.py
src/synoscd/: __init__.py  __main__.py  aca.py  cli.py  config.py  github.py  logger.py  reconciler.py  schema.py
src/synoscd/commands/: __init__.py  common.py  get.py  logs.py  reconcile.py  status.py
tests/: __init__.py  test_cli.py  test_schema.py
