[project]
name = "synoscd"
version = "0.1.0"
description = "GitOps operator for Azure Container Apps"
authors = [
    {name = "SynosCD Team"}
]
requires-python = ">=3.9"

dependencies = [
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "azure-identity>=1.13",
    "azure-mgmt-appcontainers>=1.0",
    "httpx>=0.24",
    "structlog>=23.0",
    "typer>=0.9",
    "pydantic-settings>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "black>=23.0",
    "ruff>=0.1",
    "mypy>=1.0",
    "pyinstaller>=6.0",
]

release = [
    "build>=1.0",
    "twine>=5.0",
    "pyinstaller>=6.0",
]

[project.scripts]
synos = "synoscd.cli:main"

[build-system]
requires = ["setuptools>=65.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
synoscd = ["py.typed"]

[tool.pyinstaller]
name = "synos"
entry-point = "synoscd.cli:main"
onefile = true
console = true
